@@ -38,6 +38,8 @@
 <p>2015-04-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/tiff.c (CompressionSupported): Fix Coverity 44723
+&quot;Logically dead code&quot;.</li>
 <li>coders/ps3.c (WritePS3Image): Validate results from TellBlob()
 and SeekBlob().  Should quiet Coverity 10198 &quot;Improper use of
 negative value&quot;.</li>
